--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,7 @@ include_directories(
 # in contrast to setup.py, you can choose the destination
  catkin_install_python(PROGRAMS
    src/safe_velocity_node.py
+   src/dbl_int_node.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
