--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,8 @@ include_directories(
    src/safe_velocity_node.py
    src/dbl_int_node.py
    src/unitree_bridge.py
+   src/inertial_unicycle_node.py
+   src/unitree_safe_vel.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
